--- a/index.html
+++ b/index.html
@@ -149,7 +149,99 @@
             </div>
           </div>
         </div>
-        <div id="mainFooterRight"></div>
+        <div id="mainFooterRight">
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Commons</h4>
+              <p>Free media collection</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Wikibooks</h4>
+              <p>Free textbooks</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Wikiversity</h4>
+              <p>Free learning resources</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Wikisource</h4>
+              <p>Free content library</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Meta-Wiki</h4>
+              <p>Community</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Wikivoyage</h4>
+              <p>Free travel guide</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Wikinews</h4>
+              <p>Free news source</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Wikiquote</h4>
+              <p>Free quote compendium</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Wikispecies</h4>
+              <p>Free speccies dictionary</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Wikitionary</h4>
+              <p>Free dictionary</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Wikidata</h4>
+              <p>Free knowledge base</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Mediawiki</h4>
+              <p>Free & open wiki software</p>
+            </div>
+          </a>
+          <a href="#" class="apps">
+            <img src="/pics/mediawikiwiki.svg" alt="" width="40px" />
+            <div class="text">
+              <h4>Wikifunctions</h4>
+              <p>Free function library</p>
+            </div>
+          </a>
+        </div>
       </section>
     </main>
 
