--- a/index.html
+++ b/index.html
@@ -243,15 +243,15 @@
           </a>
         </div>
       </section>
-    </main>
 
-    <footer>
-      This page is available under the
-      <a href="#">Creative Commons Attribution-ShareAlike License</a>
-      <ul>
-        <li>Terms of Use</li>
-        <li>Privacy Policy</li>
-      </ul>
-    </footer>
+      <section id="secondaryFooter">
+        This page is available under the
+        <a href="#">Creative Commons Attribution-ShareAlike License</a>
+        <ul>
+          <li>Terms of Use</li>
+          <li>Privacy Policy</li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
